2007-04-20  Ross Burton  <ross@openedhand.com>

	* applet.c:
	Update for new image API.

2007-01-24  Ross Burton  <ross@openedhand.com>

	* configure.ac:
	Disable static libraries

	* Makefile.am:
	Disable library versioning.

2007-01-23  Ross Burton  <ross@openedhand.com>

	* Initial import.

