@@ -1,3 +1,13 @@
+2007-05-04  Ross Burton  <ross@openedhand.com>
+
+	* screenshot-ui.[ch]:
+	Pull out the core save code, and allow a filename to be passed to
+	screenshot().
+
+	* applet.c:
+	* main.c:
+	Pass NULL as the filename.
+
 2007-04-20  Ross Burton  <ross@openedhand.com>
 
 	* applet.c:
